Fix low emission overflowing headers mobile view
Refs PV-290

--- a/src/common/lowEmissionConsent/lowEmissionConsent.scss
+++ b/src/common/lowEmissionConsent/lowEmissionConsent.scss
@@ -1,5 +1,8 @@
 @import '../../assets/styles/mixin';
 .low-emission-consent-component {
+  .section-label {
+    height: unset;
+  }
   .discount-checkbox,
   .discount-label {
     margin: var(--spacing-s);
